<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

    <EditText
        android:id="@+id/showtime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/pickdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/set_date" />

        <Button
            android:id="@+id/picktime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/set_time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/current_time" />

        <Button
            android:id="@+id/upload_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/upload_time" />

        <Button
            android:id="@+id/download_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" 
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/download_time" />

    </LinearLayout>


</LinearLayout>
